--- a/index.css
+++ b/index.css
@@ -23,7 +23,8 @@ h2 {
   margin: 0;
 }
 
-#autenticacao {
+.popup {
+  display: none;
   line-height: 1cm;
   border-width: 7px;
   border-style: dashed;
@@ -31,45 +32,32 @@ h2 {
   border-color: burlywood;
   padding: 5px;
   margin:auto;
-  width: 12cm;
-  height: 3.5cm;
   text-align: center;
   color: saddlebrown;
   font-family: sans-serif;
   margin-top: 1cm;
+  width: 12cm;
 }
 
-#configuracao {
-  line-height: 1cm;
-  border-width: 7px;
-  border-style: dashed;
-  border-radius: 10px;
-  border-color: burlywood;
-  padding: 5px;
-  margin:auto;
-  width: 12cm;
+#autenticacao {
+  display: block;
+}
 
-  text-align: center;
-  color: saddlebrown;
-  font-family: sans-serif;
-  margin-top: 1cm;
-
+#terminar {
+  font-size: 270%;
+  padding: 0.5cm;
 }
 
 #comandos {
-  line-height: 1cm;
-  border-width: 7px;
-  border-style: dashed;
-  border-radius: 10px;
-  border-color: burlywood;
-  padding: 5px;
-  margin:auto;
-  width: 12cm;
   height: 3.5cm;
-  text-align: center;
-  color: saddlebrown;
-  font-family: sans-serif;
-  margin-top: 1cm;
+}
+
+#estado {
+  width: 11cm;
+}
+
+input[type=button] {
+  cursor: pointer;
 }
 
 .title {
@@ -95,21 +83,7 @@ h2 {
   border-radius: 10px;
   border-width: 2px;
   border-style: outset; 
-}
-
-#estado {
-  line-height: 1cm;
-  border-width: 7px;
-  border-style: dashed;
-  border-radius: 10px;
-  border-color: burlywood;
-  padding: 5px;
-  margin:auto;
-  width: 11cm;
-  text-align: center;
-  color: saddlebrown;
-  font-family: sans-serif;
-  margin-top: 1cm;
+  cursor: pointer;
 }
 
 #tabuleiro {
