--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ input[type=button] {
   width: 0.25cm;
   height: 0.6cm;
   border-radius: 100px;
-  background-color: moccasin;
+  background-color: darkolivegreen;
   margin-top: 0.3cm;
   margin-left: 0.25cm;
   transform: rotate(-25deg);
